--- a/odata/webapp/view/App.view.xml
+++ b/odata/webapp/view/App.view.xml
@@ -7,33 +7,27 @@
     <Shell id="shell">
         <App id="app">
             <pages>
-                
                 <f:FlexibleColumnLayout
-                id="fcl" 
-                backgroundDesign="Solid"
-                
-                 >
-                <!-- 화면 구성 배치-->
+                    id="fcl"
+                    backgroundDesign="Solid"
+                >
+                    <!-- 화면 구성 배치-->
 
-                <!-- 첫번째 페이지 -->
-                <f:beginColumnPages>
-                    <mvc:XMLView 
-                        id="beginView"
-                        viewName="odata.view.View1"
-                        width = "100%">
-                    </mvc:XMLView>
-                </f:beginColumnPages>
+                    <!-- 첫번째 페이지 -->
+                    <f:beginColumnPages>
+                        <mvc:XMLView
+                            id="beginView"
+                            viewName="odata.view.View1"
+                            width="100%"></mvc:XMLView>
+                    </f:beginColumnPages>
 
-                <f:midColumnPages>
-                    <mvc:XMLView 
-                        id="detailView"
-                        viewName="odata.view.Detail"
-                        width = "100%">
-                    </mvc:XMLView>
-
-
-                </f:midColumnPages>
-
+                    <!-- 두번째 페이지 -->
+                    <f:midColumnPages>
+                        <mvc:XMLView
+                            id="detailView"
+                            viewName="odata.view.Detail"
+                            width="100%"></mvc:XMLView>
+                    </f:midColumnPages>
                 </f:FlexibleColumnLayout>
             </pages>
         </App>
