--- a/odata/webapp/view/Detail.view.xml
+++ b/odata/webapp/view/Detail.view.xml
@@ -5,8 +5,9 @@
     xmlns:f="sap.f"
     xmlns:form="sap.ui.layout.form"
     xmlns="sap.uxap"
+    xmlns:layout="sap.ui.layout"
 >
-    <ObjectPageLayout 
+    <ObjectPageLayout
         id="ObjectPageLayout"
         showTitleInHeaderContent="true"
         alwaysShowContentHeader="false"
@@ -15,86 +16,95 @@
         isChildPage="true"
         upperCaseAnchorBar="false">
         <headerTitle>
+
             <ObjectPageDynamicHeaderTitle>
+
+                <expandedHeading>
+                    <m:Title text="{app>/detail/Roomno}" wrapping="true" />
+                </expandedHeading>
+
+
             </ObjectPageDynamicHeaderTitle>
         </headerTitle>
 
         <headerContent>
             <m:FlexBox wrap="Wrap"
-                       fitContainer="true"
-                       alignItems="Stretch">
+                fitContainer="true"
+                alignItems="Stretch">
+
                 <f:Avatar
-                    displayShape="Square"
+                    src="sap-icon://bed"
+                    backgroundColor="Accent7"
                     displaySize="L"
-                    class="sapUiTinyMarginEnd">
-                </f:Avatar>
+                    class="sapUiTinyMarginEnd" />
+
+                <layout:VerticalLayout class="sapUiSmallMarginBeginEnd">
+                    <m:ObjectStatus title="층 수" text="{app>/detail/Floor}" />
+                    <m:ObjectStatus title="룸 id" text="{app>/detail/Roomid}" />
+                    <m:ObjectStatus title="방 호수" text="{app>/detail/Roomno}" />
+                    <m:ObjectStatus title="현재 방 상태" text="{app>/detail/Roomtp}" />
+                </layout:VerticalLayout>
             </m:FlexBox>
         </headerContent>
 
         <sections>
-            <ObjectPageSection title="General Information">
-                <subSections>
-                    <ObjectPageSubSection>
-                        <blocks>
-                            <m:Text text="{app>/detail/Plant}" />
-                            <!-- <m:VBox>
-                                <m:VBox>
-                                    <m:Text text="기타"/>
-                                    <m:TextArea width="100%" height="100px" />
-                                    <m:Text text="추가사항"/>
-                                    <m:TextArea width="100%" height="100px" />
-                               </m:VBox>
-                            </m:VBox>  -->
-                        </blocks>
-                    </ObjectPageSubSection>
-                </subSections>
-            </ObjectPageSection>
 
-            <ObjectPageSection title="Suppliers">
+
+            <ObjectPageSection title="필요물품 리스트">
                 <subSections>
                     <ObjectPageSubSection>
                         <blocks>
+
+                            <m:Table
+                                id="mTable"
+                                items="{all>/filterMTable}">
+                                <m:columns>
+                                    <m:Column>
+                                        <m:Text text="객실타입" />
+                                    </m:Column>
+
+                                    <m:Column>
+                                        <m:Text text="제품명" />
+                                    </m:Column>
+
+                                    <m:Column>
+                                        <m:Text text="수량" />
+                                    </m:Column>
+
+                                </m:columns>
+                                <m:items>
+                                    <m:ColumnListItem>
+                                        <m:cells>
+                                            <m:ObjectIdentifier text="{all>Roomtp}"></m:ObjectIdentifier>
+                                            <m:ObjectIdentifier text="{all>prod}"></m:ObjectIdentifier>
+                                            <m:ObjectIdentifier text="{all>Prodquan}"></m:ObjectIdentifier>
+                                        </m:cells>
+                                    </m:ColumnListItem>
+                                </m:items>
+                            </m:Table>
+
                             <m:VBox>
-                                    <m:Text text="특이사항" />
-                                    <m:TextArea 
-                                    width="100%" 
+                                <m:Text text="특이사항" />
+                                <m:TextArea
+                                    width="100%"
                                     height="100px"
                                     value="{app>/detail/Note}"
                                     valueState="Information"
                                     placeholder="ValueState : Information"
-                                     />
-                            
-                                    
-    
-                                    <m:Text text="추가사항"/>
-                                    <m:TextArea width="100%" height="100px" />
+                                />
 
-                                    <m:Button text="저장" type="Emphasized" press="onPress" />
 
-                                    
-                                </m:VBox>
-                            <!-- <m:Table 
-                            id="suppliersTable"
-                            items="{ path: '/RoomstatusSet' }">
-                            <m:columns>
-                                <m:Column>
-                                    <m:Text text="특이사항" />
-                                </m:Column>
-                            
-                            </m:columns>
-                            <m:items>
-                                <m:ColumnListItem type="Navigation" press=".onDetailListItemPress">
-                                    <m:cells>
-                                        <m:ObjectIdentifier text="{Note}"></m:ObjectIdentifier>
-                                    </m:cells>
-                                
-                                </m:ColumnListItem>
-                            </m:items>
-                        </m:Table> -->
+                                <!-- <m:Text text="추가사항"/> -->
+                                <!-- <m:TextArea width="100%" height="100px" /> -->
+
+                                <m:Button text="저장" type="Emphasized" press="onPress" />
+
+
+                            </m:VBox>
                         </blocks>
                     </ObjectPageSubSection>
                 </subSections>
-            </ObjectPageSection> 
+            </ObjectPageSection>
         </sections>
     </ObjectPageLayout>
 </mvc:View>
